# bazel-demo-cpplib-with-pybindings

./: MODULE.bazel
cpplib/: BUILD.bazel  answer.cpp
